# playground-GPT

./: README.md  pyproject.toml
lab/: self-attention.ipynb
playground_gpt/: dataset.py  embedding.py  log.py  tokenizer.py  tokenizer_utils.py
playground_gpt/models/: vocab.py
tests/: test_tokenizer.py
